[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-token-counter"
version = "1.0.0"
description = "Accurate token counting for multiple LLM providers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LucidDreamer", email = "info@luciddreamer.dev"}
]
keywords = [
    "ai",
    "llm",
    "tokens",
    "counting",
    "gpt",
    "claude",
    "gemini",
    "llama",
    "openai",
    "anthropic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/luciddreamer/ai-token-counter"
Documentation = "https://github.com/luciddreamer/ai-token-counter#readme"
Repository = "https://github.com/luciddreamer/ai-token-counter"

[tool.setuptools]
packages = ["ai_token_counter"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
